@@ -180,6 +180,7 @@ export(umx_string_to_algebra)
 export(umx_swap_a_block)
 export(umx_time)
 export(umx_trim)
+export(umx_update_OpenMx)
 export(umx_write_to_clipboard)
 export(xmuHasSquareBrackets)
 export(xmuLabel_MATRIX_Model)
